# RISC-V-ISA-Cache-Simulator

./: CMakeLists.txt  README.md  main.cpp
Cache/: CMakeLists.txt  CacheBase.cpp  CacheLRU.cpp  CachePLRU.cpp
Entities/: Address.cpp  CMakeLists.txt  CacheLine.cpp
Parameters/: CMakeLists.txt  CacheConfig.cpp  CacheReplacementPolicies.cpp  CommandTypes.cpp
